--- a/project/nef.xcodeproj/xcshareddata/xcschemes/NefMenu.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/NefMenu.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8B5812772403DC6C00587211"
-               BuildableName = "nef-clean"
-               BlueprintName = "Clean"
+               BlueprintIdentifier = "8B444F1423FED31400975C8C"
+               BuildableName = "nef-menu"
+               BlueprintName = "Nef"
                ReferencedContainer = "container:nef.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,12 +44,22 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B5812772403DC6C00587211"
-            BuildableName = "nef-clean"
-            BlueprintName = "Clean"
+            BlueprintIdentifier = "8B444F1423FED31400975C8C"
+            BuildableName = "nef-menu"
+            BlueprintName = "Nef"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "clean"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--project ~/Desktop/BowPlayground"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -61,9 +71,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8B5812772403DC6C00587211"
-            BuildableName = "nef-clean"
-            BlueprintName = "Clean"
+            BlueprintIdentifier = "8B444F1423FED31400975C8C"
+            BuildableName = "nef-menu"
+            BlueprintName = "Nef"
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
