migrated PlaygroundBook and Playground scripts to use the new Argument Parser

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-h"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--name Miguel\ Angel"
             isEnabled = "YES">
          </CommandLineArgument>
