migrate carbon to use the new swift-arguments-parsable lib

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/CarbonPage.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/CarbonPage.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "--page &quot;~/Desktop/BowPlayground.app/Contents/MacOS/BowPlayground.playground/Pages/adios.xcplaygroundpage&quot;"
+            argument = "--page &quot;/Users/miguelangel/Desktop/BowPlayground.app/Contents/MacOS/BowPlayground.playground/Pages/page.xcplaygroundpage&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
