migrate jekyll to use the new swift-arguments-parsable lib
minor changes

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Jekyll.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Jekyll.xcscheme
@@ -56,7 +56,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--output ~/Desktop/migue"
+            argument = "--output /Users/miguelangel/Desktop/migue"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
