--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-h"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--project /Users/miguelangel/Desktop/BowPlayground.app"
             isEnabled = "YES">
          </CommandLineArgument>
