--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: swift test --disable-sandbox --package-path project --configuration debug
+      run: swift test --disable-sandbox --package-path project --configuration debug | xcpretty -c
