Add cocoapods dependency

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,3 +2,5 @@ source "https://rubygems.org"
 
 gem "jekyll", ">= 4.0.0"
 gem "jazzy", "~> 0.9.4"
+# Needed to support swift_versions param
+gem "cocoapods", "~> 1.9.1"
