Add API reference to microsite (#142)
* Add styles for API reference

* Add initial script to generate documentation

* Update script to generate documentation

* Save current branch tag

* Initialize missing variable

* Customize jazzy command

* Add Jazzy dependency

* Add cocoapods dependency

* Generate only current branch

* Update Jazzy dependency

* Use current branch instead of default version

* Add link to API Reference

* Set nef colors

* update gitignore

* update gen-docs

* udpate contributing guidelines

* update gen docs

fix assets in gen-docs script

* update gitignore adding files generated for documentation

Co-authored-by: Miguel Ángel Díaz <madiaz.dev@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,17 @@ _site
 .bundle/
 vendor/
 /lib/bundler/man/
-docs/docs/*
+/docs/docs/*
+/docs/.bundle/
+/docs/vendor/
+
+## Docs
+/pub-dir
+/gen-docs
+/json-files
 /docs/_data/sidebar.yml
+/docs/_data/versions.json
+/docs/Gemfile.lock
 
 ## nef
 /Documentation.app/nef
