--- a/docs/_data/features.yml
+++ b/docs/_data/features.yml
@@ -12,5 +12,5 @@ content:
       icon: img/main-image-tertiary.svg
 
     - title: Integration
-      description: Integrates Playgrounds with Carbon to export code snippets and Jekyll to create a microsite.
+      description: Integrates Playgrounds with Carbon to export code snippets, and Jekyll to create a microsite.
       icon: img/main-image-quaternary.svg
