--- a/.github/workflows/nef-compile.yml
+++ b/.github/workflows/nef-compile.yml
@@ -11,7 +11,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Compile documentation
       run: |
-        brew tap bow-swift/nef
         brew install nef
         gem install cocoapods -v 1.9.1
-        nef compile Documentation.app
+        nef compile --project Documentation.app
