comments in PR about allow only aphanumeric chars

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Markdown.xcscheme
@@ -50,6 +50,16 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--project ~/Desktop/Documentation.app"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output ~/Desktop/Migue2"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
