--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Switch Xcode version
+      run: sudo xcode-select -s /Applications/Xcode_11.4.1.app/Contents/Developer
     - name: Generate microsite
       run: |
         brew install nef
