--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -3,11 +3,42 @@ name: Compile and test
 on: [pull_request]
 
 jobs:
-  build:
-
+  macos:
+    name: macos
     runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: Switch Xcode version
+      run: sudo xcode-select -s /Applications/Xcode_11.4.1.app/Contents/Developer
     - name: Run tests
-      run: swift test --disable-sandbox --package-path project --configuration debug | xcpretty -c
+      run: swift test
+    - name: Generate linux tests
+      run: swift test --generate-linuxmain
+    - name: Cached auto-generate linux tests
+      uses: actions/upload-artifact@v1
+      with:
+        name: generate-linuxmain
+        path: project/Tests
+
+  linux:
+    name: linux
+    needs: macos
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Clean Tests
+      run: rm -rf project/Tests
+    - name: Get auto-generate linux tests
+      uses: actions/download-artifact@v1
+      with:
+        name: generate-linuxmain
+        path: project/Tests
+    - name: Remove generated artifact
+      uses: geekyeggo/delete-artifact@v1
+      with:
+        name: generate-linuxmain
+        failOnError: false
+    - name: Run tests
+      run: swift test
