update nef Playgrounds module to support SPM option

--- a/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/Playground.xcscheme
@@ -52,7 +52,15 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-h"
+            argument = "--name Migue"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output ~/Desktop"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--spm"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
