--- a/template/osx/spm/PROJECT.xcodeproj/xcshareddata/xcschemes/Swift Packages.xcscheme
+++ b/template/osx/spm/PROJECT.xcodeproj/xcshareddata/xcschemes/Swift Packages.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1010"
+   LastUpgradeVersion = "1200"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "07E5010A20CABF0000EDBFB7"
-               BuildableName = "PROJECT"
-               BlueprintName = "PROJECT"
+               BlueprintIdentifier = "8BBF1CCB24D0417A009559D8"
+               BuildableName = "Swift Packages.framework"
+               BlueprintName = "Swift Packages"
                ReferencedContainer = "container:PROJECT.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,15 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "07E5010A20CABF0000EDBFB7"
-            BuildableName = "PROJECT"
-            BlueprintName = "PROJECT"
-            ReferencedContainer = "container:PROJECT.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -59,9 +50,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "07E5010A20CABF0000EDBFB7"
-            BuildableName = "PROJECT"
-            BlueprintName = "PROJECT"
+            BlueprintIdentifier = "8BBF1CCB24D0417A009559D8"
+            BuildableName = "Swift Packages.framework"
+            BlueprintName = "Swift Packages"
             ReferencedContainer = "container:PROJECT.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
