--- a/project/nef.xcodeproj/xcshareddata/xcschemes/PlaygroundBook.xcscheme
+++ b/project/nef.xcodeproj/xcshareddata/xcschemes/PlaygroundBook.xcscheme
@@ -50,6 +50,20 @@
             ReferencedContainer = "container:nef.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--name Test"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--package ~/Desktop/migue/Package.swift"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--output ~/Desktop/migue/output"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
