--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Switch Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_11.4.1.app/Contents/Developer
+    - name: Switch to Xcode 12
+      run: sudo xcode-select -s /Applications/Xcode_12.0.0.app/Contents/Developer
     - name: Run tests
       run: swift test
     - name: Generate linux tests
